@@ -8,6 +8,7 @@
 @import "styles/popupmenu.css";
 @import "styles/bar.css";
 @import "styles/gmenu.css";
+@import "styles/sbox.css";
 
 body{
         background-color:#e5e5e5;
