@@ -1,0 +1,31 @@
+@charset "utf-8";
+/* CSS Document */
+
+div#selection_box{
+	position: absolute;
+	
+	filter:alpha(opacity=40);
+	-moz-opacity:.40;
+	opacity:.40;
+	
+	background-color:#0000FF;
+	border:1px black solid;
+	width: 1px;
+	height: 1px;
+	z-index: 4;
+	overflow:hidden;
+}
+
+div#box_on{
+	position: absolute;
+	z-index:2;
+}
+
+span#period_span{
+	font-weight: bold; 
+	font-size: 11px; 
+	color: #FFFFFF; 
+	position: absolute; 
+	top: 2px; 
+	right: 4px;
+}
